--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@ Updatecli reads a yaml or a go template configuration file, then works into thre
 
 == Why
 
-They are many projects out there, which can continuously update your files but they all have an opinionated way of doing it and they often want you to adopt a new platform. Building and distributing software is a difficult thing and good practices constantly evolve. Updatecli was built to work independently wherever you need, and combining whatever workflow you are using as you can see in the following section.
+They are many projects out there which can continuously update your files, but they all have an opinionated way of doing it and they often want you to adopt a new platform. Building and distributing softwares is a difficult task and good practices constantly evolve. Updatecli was built to work independently wherever you need, and combining whatever workflow you are using, as you can see in the following section.
 
 == Installation
 
