--- a/README.adoc
+++ b/README.adoc
@@ -41,7 +41,7 @@ The updatecli documentation is available on link:https://www.updatecli.io/docs/p
 
 == Contributing
 
-This is a community-oriented project, all contributions are greatly appreciated.
+As a community-oriented project, all contributions are greatly appreciated!
 
 Here is a non-exhaustive list of contributions:
 
