--- a/README.adoc
+++ b/README.adoc
@@ -88,7 +88,7 @@ conditions:
     sourceID: jenkins
     kind: dockerImage
     spec:
-      image: "jenkins/jenkins"
+      image: "jenkinsci/jenkins"
 
 targets:
   bumpJenkins:
