--- a/README.adoc
+++ b/README.adoc
@@ -23,7 +23,7 @@ Updatecli reads a yaml or a go template configuration file, then works into thre
 
 == Feature
 
-* *Flexibility*: Easy to define tailored update strategies, you are just one yaml file to it.
+* *Flexibility*: Easy to define tailored update strategies, you are just one yaml file from it.
 * *Portability*: Easy to add to your workflow whatever it is. Just one command to run.  Of course, it's easy to remove.
 * *Extensibility*: Easy to add new go packages to support more workflows.
 
@@ -86,7 +86,6 @@ sources:
 conditions:
   docker:
     name: "Test if Docker Image Published on Registry"
-    sourceID: jenkins
     kind: dockerImage
     spec:
       image: jenkins/jenkins
@@ -94,7 +93,6 @@ conditions:
 targets:
   bumpJenkins:
     name: jenkins/jenkins docker tag
-    sourceID: jenkins
     scmID: default
     kind: yaml
     spec:
