--- a/README.adoc
+++ b/README.adoc
@@ -39,7 +39,7 @@ Updatecli is a Go binary available for Linux, MacOS and Windows from the link:ht
 
 == Documentation
 
-The updatecli documentation is available on link:https://www.updatecli.io/docs/prologue/introduction/[www.updatecli.io], but feel free to look at the example section to get an overview of how updatecli works.
+The documentation of Updatecli is available at link:https://www.updatecli.io/docs/prologue/introduction/[www.updatecli.io], but you can also look at the `examples` section to get an overview.
 
 == Contributing
 
