--- a/README.adoc
+++ b/README.adoc
@@ -19,8 +19,6 @@ Updatecli reads a yaml or a go template configuration file, then works into thre
 2. Conditions: Ensure that conditions are met based on the value retrieved during the source stage.
 3. Targets: Update and publish the target files based on a value retrieved from the source stage.
 
-**A Quick-start is available on link:https://www.updatecli.io/docs/prologue/quick-start/[www.updatecli.io/docs/prologue/quick-start]**
-
 == Feature
 
 * *Flexibility*: Easy to define tailored update strategies, you are just one yaml file from it.
@@ -32,6 +30,12 @@ Updatecli reads a yaml or a go template configuration file, then works into thre
 There are already many projects out there which can continuously update your files, but they all have an opinionated way of doing it and they often want you to adopt a new platform. 
 Building and distributing software is a difficult task and good practices constantly evolve. 
 Updatecli was built to work independently of the underlying dependencies to update, wherever you need it and combining whatever workflow you are using, as you can see in the following section.
+
+== Demo
+
+link:https://asciinema.org/a/B5qIkTojFb5Yoy3vlqUFvu5BO[image:https://asciinema.org/a/B5qIkTojFb5Yoy3vlqUFvu5BO.svg[Asciinema]]
+
+**The Quick-start is available on link:https://www.updatecli.io/docs/prologue/quick-start/[www.updatecli.io/docs/prologue/quick-start]**
 
 == Installation
 
@@ -54,87 +58,6 @@ Here is a non-exhaustive list of possible contributions:
 * Share the love
 
 More information available at link:https://github.com/updatecli/updatecli/blob/main/CONTRIBUTING.adoc[CONTRIBUTING]
-
-
-=== Example
-In this example, we define an update strategy in "updatecli.yaml" then we run `updatecli apply --config updatecli.yaml`.
-Our objective is to know if the Jenkins project published a new stable version, if they build an appropriated docker image specifically for jdk11 and automatically update our infrastructure accordingly.
-
-[cols="2a,2a"]
-|===
-|```
-## updatecli.yaml
-title: Update Jenkins Version
-
-scms:
-  default:
-    kind: github
-    spec:
-      user: olblak
-      email: me@olblak.com
-      owner: olblak
-      repository: charts
-      token: mySecretTokenWhichShouldNeverUsedThisWay
-      username: olblak
-      branch: main
-
-sources:
-  jenkins:
-    name: Get latest Jenkins version
-    kind: jenkins
-    spec:
-      release: weekly
-
-conditions:
-  docker:
-    name: "Test if Docker Image Published on Registry"
-    kind: dockerImage
-    spec:
-      image: jenkins/jenkins
-
-targets:
-  bumpJenkins:
-    name: jenkins/jenkins docker tag
-    scmID: default
-    kind: yaml
-    spec:
-      file: charts/jenkins/values.yaml
-      key: jenkins.controller.imageTag
-
-pullrequests:
-  default:
-    title: Open pullrequest with new Jenkins version
-    kind: github
-    scmID: default
-    target: 
-      - bumpJenkins
-    spec:
-      automerge: true
-      mergemethod: squash
-      labels:
-        - dependencies
-```
-
-|What it says:
-
-. Sources: +
-What's the latest jenkins weekly version? +
-=> 2.335 +
-
-. Conditions: +
-Is there a docker image "jenkins/jenkins" from Dockerhub with the tag "2.335" +
-=> Yes then proceed otherwise abort +
-
-. Targets: +
-Do we have to update the key "jenkins.controller.imageTag" from file "./charts/jenkins/values.yaml" located on the Github repository olblak/charts to "2.335"? +
-=> If yes then open a Github pull request to the branch "main"
-
-|===
-
-More information link:https://www.updatecli.io/docs/prologue/introduction/[here]
-
-
----
 
 == Links
 
