cleanup(pipeline) remove deprecated code for prefix and postfix
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -148,10 +148,11 @@ targets:
   idName:
     name: "updatecli"
     kind: "yaml"
-    prefix: "olblak/polls@256:"
     spec:
       file: "..."
       key:  "..."
+    transformers:
+      - addPrefix: "olblak/polls@256:"
 ```
 
 
