--- a/README.adoc
+++ b/README.adoc
@@ -121,7 +121,7 @@ Is there a docker image "jenkins/jenkins" from Dockerhub with the tag "2.335" +
 
 . Targets: +
 Do we have to update the key "jenkins.controller.imageTag" from file "./charts/jenkins/values.yaml" located on the Github repository olblak/charts to "2.335"? +
-=> If yes then execute the action `default` which opens a Github pull request to the branch "main"
+=> If yes then execute the action `default` opening a GitHub pull request to the "main" branch
 
 |===
 
