--- a/README.adoc
+++ b/README.adoc
@@ -42,6 +42,17 @@ link:https://asciinema.org/a/CR5DIxyTLnvtt8NllEeYAx83U[image:https://asciinema.o
 
 Updatecli is a Go binary available for Linux, MacOS and Windows from the link:https://github.com/updatecli/updatecli/releases[release page] or installed via link:https://www.updatecli.io/docs/prologue/installation/[other methods].
 
+**Verify File Checksum Signature**
+```
+COSIGN_EXPERIMENTAL=1 cosign verify-blob --cert checksums.txt.pem --signature checksums.txt.sig checksums.txt
+```
+
+**Verify File Checksum Integrity**
+Once you've download both the checksums.txt and your binary, you can verify the integrity of your file by running:
+```
+sha256sum --ignore-missing -c dist/checksums.txt
+```
+
 == Documentation
 
 The documentation of Updatecli is available at link:https://www.updatecli.io/docs/prologue/introduction/[www.updatecli.io], but you can also look at the `examples` section to get an overview.
