--- a/README.adoc
+++ b/README.adoc
@@ -197,7 +197,7 @@ More information available at link:https://github.com/updatecli/updatecli/blob/m
 * 2025
 ** FOSDEM (BE) - Continuously Update Everything two years later link:https://fosdem.org/2025/schedule/event/fosdem-2025-6076-continuously-update-everything-two-years-later[Event]
 ** Incontro DevOps (IT) - Automate or stagnate: surviving the era of continuous updates link:https://www.youtube.com/watch?v=kVOYFFbbCho[Video]
-** OSX (FR) - Updatecli: how to keep your applications up-to-date without losing your mind link:https://www.opensource-experience.com/en/event[Event]
+** OSX (FR) - Updatecli: how to keep your applications up-to-date without losing your mind link:https://www.youtube.com/watch?v=Z-RPVbUPYiI[Video]
 * 2024
 ** DevOps Days 15 year anniversary celebration (BE) - Continuously Update Everything link:https://www.youtube.com/watch?v=PlEm-YinALk[Video]
 * 2023
